--- a/Udemy Course/7MinutesWorkout/app/src/main/res/values/strings.xml
+++ b/Udemy Course/7MinutesWorkout/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">7MinutesWorkout</string>
     <string name="image">image</string>
+    <string name="get_ready_for">GET READY FOR</string>
 </resources>
