--- a/Udemy Course/CloudPoint/app/src/main/res/values/strings.xml
+++ b/Udemy Course/CloudPoint/app/src/main/res/values/strings.xml
@@ -7,6 +7,9 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="please_wait">Please Wait…</string>
+
+    <string name="image_contentDescription">image</string>
+    <string name="miles_per_hour">miles/hour</string>
+
 </resources>
